--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 *.builtin
 *.mdp.cmd
 *.cmd
+*kconfig~
 .config
 .missing-syscalls.d
 .tmp_System.map
@@ -143,4 +144,5 @@ usr/.initramfs_data.cpio.d
 usr/gen_init_cpio
 usr/initramfs_data.cpio
 vmlinux
+.config.old
 
