--- a/arch/arm/configs/fire_defconfig
+++ b/arch/arm/configs/fire_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 3.4.4_Nitrogen Kernel Configuration
+# Linux/arm 3.4.0-Fire-and-Flames Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_ARM_HAS_SG_CHAIN=y
@@ -121,7 +121,6 @@ CONFIG_RD_BZIP2=y
 CONFIG_RD_LZMA=y
 CONFIG_RD_XZ=y
 CONFIG_RD_LZO=y
-CONFIG_RD_LZ4=y
 CONFIG_CC_OPTIMIZE_FOR_SIZE=y
 CONFIG_SYSCTL=y
 CONFIG_ANON_INODES=y
@@ -228,18 +227,11 @@ CONFIG_IOSCHED_TEST=m
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_ROW=y
 CONFIG_IOSCHED_CFQ=y
-CONFIG_IOSCHED_SIO=y
-CONFIG_IOSCHED_FIOPS=y
-CONFIG_IOSCHED_BFQ=y
-CONFIG_CGROUP_BFQIO=y
 # CONFIG_DEFAULT_DEADLINE is not set
 # CONFIG_DEFAULT_ROW is not set
-# CONFIG_DEFAULT_CFQ is not set
-CONFIG_DEFAULT_BFQ=y
-# CONFIG_DEFAULT_SIO is not set
-# CONFIG_DEFAULT_FIOPS is not set
+CONFIG_DEFAULT_CFQ=y
 # CONFIG_DEFAULT_NOOP is not set
-CONFIG_DEFAULT_IOSCHED="bfq"
+CONFIG_DEFAULT_IOSCHED="cfq"
 # CONFIG_INLINE_SPIN_TRYLOCK is not set
 # CONFIG_INLINE_SPIN_TRYLOCK_BH is not set
 # CONFIG_INLINE_SPIN_LOCK is not set
@@ -470,12 +462,8 @@ CONFIG_MSM_IPC_ROUTER_SMD_XPRT=y
 CONFIG_MSM_QMI_INTERFACE=y
 # CONFIG_MSM_TEST_QMI_CLIENT is not set
 # CONFIG_MSM_DALRPC is not set
-CONFIG_CONFIG_CPU_UNDERCLOCK=y
-CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
-CONFIG_MSM_CPU_FREQ_MAX=1190400
-CONFIG_MSM_CPU_FREQ_MIN=196000
+# CONFIG_MSM_CPU_FREQ_SET_MIN_MAX is not set
 CONFIG_MSM_DEVFREQ_CPUBW=y
-# CONFIG_CPU_OVERCLOCK is not set
 # CONFIG_MSM_AVS_HW is not set
 # CONFIG_MSM_HW3D is not set
 CONFIG_AMSS_7X25_VERSION_2009=y
@@ -561,7 +549,6 @@ CONFIG_MSM_RTB_SEPARATE_CPUS=y
 # CONFIG_MSM_DCVS is not set
 # CONFIG_MSM_CPR is not set
 # CONFIG_MSM_CACHE_DUMP is not set
-CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_SONY_SSM=y
 # CONFIG_MSM_HSIC_SYSMON is not set
 CONFIG_MSM_ENABLE_WDOG_DEBUG_CONTROL=y
@@ -627,7 +614,6 @@ CONFIG_MULTI_IRQ_HANDLER=y
 CONFIG_ARM_GIC=y
 CONFIG_GIC_SECURE=y
 # CONFIG_FIQ_DEBUGGER is not set
-CONFIG_INTELLI_PLUG=y
 
 #
 # Bus support
@@ -686,7 +672,7 @@ CONFIG_MIGRATION=y
 CONFIG_ZONE_DMA_FLAG=0
 CONFIG_BOUNCE=y
 CONFIG_VIRT_TO_BUS=y
-CONFIG_KSM=y
+# CONFIG_KSM is not set
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 # CONFIG_CLEANCACHE is not set
 CONFIG_MEMORY_HOLE_CARVEOUT=y
@@ -699,7 +685,6 @@ CONFIG_ENABLE_VMALLOC_SAVING=y
 # CONFIG_NO_VM_RECLAIM is not set
 CONFIG_FORCE_MAX_ZONEORDER=11
 CONFIG_ALIGNMENT_TRAP=y
-CONFIG_ALLOW_CPU_ALIGNMENT=y
 # CONFIG_UACCESS_WITH_MEMCPY is not set
 # CONFIG_SECCOMP is not set
 CONFIG_CC_STACKPROTECTOR=y
@@ -717,10 +702,8 @@ CONFIG_ZBOOT_ROM_BSS=0
 # CONFIG_ARM_APPENDED_DTB is not set
 CONFIG_CMDLINE=""
 # CONFIG_XIP_KERNEL is not set
-CONFIG_KEXEC=y
-CONFIG_ATAGS_PROC=y
-CONFIG_KEXEC_HARDBOOT=y
-CONFIG_CRASH_DUMP=y
+# CONFIG_KEXEC is not set
+# CONFIG_CRASH_DUMP is not set
 # CONFIG_AUTO_ZRELADDR is not set
 
 #
@@ -737,28 +720,15 @@ CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
-CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTMAX=y
-# CONFIG_CPU_FREQ_DEFAULT_GOV_ZZMOOVE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_INTELLIACTIVE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_LIONHEART is not set
+CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_PEGASUSQ is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_WHEATLEY is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
-# CONFIG_CPU_FREQ_GOV_USERSPACE is not set
+CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
-CONFIG_CPU_FREQ_GOV_SMARTMAX=y
-CONFIG_CPU_FREQ_GOV_ZZMOOVE=y
-CONFIG_CPU_FREQ_GOV_INTELLIACTIVE=y
-CONFIG_CPU_FREQ_GOV_LIONHEART=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
-CONFIG_CPU_FREQ_GOV_PEGASUSQ=y
-CONFIG_CPU_FREQ_GOV_WHEATLEY=y
-CONFIG_CPU_BOOST=y
 
 #
 # ARM CPU frequency scaling drivers
@@ -782,7 +752,6 @@ CONFIG_CPU_FREQ_MSM=y
 CONFIG_VFP=y
 CONFIG_VFPv3=y
 CONFIG_NEON=y
-CONFIG_KERNEL_MODE_NEON=y
 
 #
 # Userspace binary formats
@@ -799,7 +768,6 @@ CONFIG_HAVE_AOUT=y
 #
 CONFIG_SUSPEND=y
 CONFIG_SUSPEND_FREEZER=y
-CONFIG_POWERSUSPEND=y
 CONFIG_PM_SLEEP=y
 CONFIG_PM_SLEEP_SMP=y
 CONFIG_PM_AUTOSLEEP=y
@@ -811,7 +779,6 @@ CONFIG_PM=y
 # CONFIG_PM_DEBUG is not set
 # CONFIG_APM_EMULATION is not set
 CONFIG_PM_CLK=y
-CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_CPU_PM=y
 # CONFIG_SUSPEND_TIME is not set
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
@@ -859,26 +826,8 @@ CONFIG_INET_XFRM_MODE_BEET=y
 CONFIG_INET_DIAG=y
 CONFIG_INET_TCP_DIAG=y
 # CONFIG_INET_UDP_DIAG is not set
-CONFIG_TCP_CONG_ADVANCED=y
-CONFIG_TCP_CONG_BIC=m
+# CONFIG_TCP_CONG_ADVANCED is not set
 CONFIG_TCP_CONG_CUBIC=y
-CONFIG_TCP_CONG_WESTWOOD=y
-CONFIG_TCP_CONG_HTCP=y
-CONFIG_TCP_CONG_HSTCP=y
-CONFIG_TCP_CONG_HYBLA=y
-CONFIG_TCP_CONG_VEGAS=y
-CONFIG_TCP_CONG_SCALABLE=y
-CONFIG_TCP_CONG_LP=y
-CONFIG_TCP_CONG_VENO=y
-CONFIG_TCP_CONG_YEAH=y
-CONFIG_TCP_CONG_ILLINOIS=y
-CONFIG_DEFAULT_CUBIC=y
-# CONFIG_DEFAULT_HTCP is not set
-# CONFIG_DEFAULT_HYBLA is not set
-# CONFIG_DEFAULT_VEGAS is not set
-# CONFIG_DEFAULT_VENO is not set
-# CONFIG_DEFAULT_WESTWOOD is not set
-# CONFIG_DEFAULT_RENO is not set
 CONFIG_DEFAULT_TCP_CONG="cubic"
 # CONFIG_TCP_MD5SIG is not set
 CONFIG_IPV6=y
@@ -1367,7 +1316,6 @@ CONFIG_QSEECOM=y
 # CONFIG_QPNP_MISC is not set
 # CONFIG_USB_HSIC_SMSC_HUB is not set
 # CONFIG_TI_DRV2667 is not set
-CONFIG_HPH_HIGH_PERF=y
 # CONFIG_C2PORT is not set
 
 #
@@ -1779,7 +1727,6 @@ CONFIG_LEGACY_PTY_COUNT=256
 # CONFIG_TRACE_SINK is not set
 CONFIG_DEVMEM=y
 CONFIG_DEVKMEM=y
-CONFIG_FRANDOM=y
 
 #
 # Serial drivers
@@ -2098,8 +2045,7 @@ CONFIG_THERMAL_HWMON=y
 # CONFIG_THERMAL_TSENS is not set
 # CONFIG_THERMAL_TSENS8960 is not set
 CONFIG_THERMAL_TSENS8974=y
-CONFIG_INTELLI_THERMAL=y
-# CONFIG_THERMAL_MONITOR is not set
+CONFIG_THERMAL_MONITOR=y
 CONFIG_THERMAL_QPNP=y
 CONFIG_THERMAL_QPNP_ADC_TM=y
 # CONFIG_WATCHDOG is not set
@@ -2718,7 +2664,6 @@ CONFIG_SND_SOC_I2C_AND_SPI=y
 # CONFIG_SND_SOC_ALL_CODECS is not set
 CONFIG_SND_SOC_WCD9306=y
 CONFIG_SND_SOC_MSM_STUB=y
-CONFIG_SOUND_CONTROL_HAX_3_GPL=y
 # CONFIG_SOUND_PRIME is not set
 CONFIG_HID_SUPPORT=y
 CONFIG_HID=y
@@ -3298,8 +3243,6 @@ CONFIG_DEVFREQ_GOV_POWERSAVE=y
 CONFIG_DEVFREQ_GOV_USERSPACE=y
 CONFIG_DEVFREQ_GOV_MSM_ADRENO_TZ=y
 CONFIG_DEVFREQ_GOV_MSM_CPUFREQ=y
-CONFIG_SIMPLE_GPU_ALGORITHM=y
-CONFIG_DEVFREQ_GOV_CONSERVATIVE=y
 
 #
 # DEVFREQ Drivers
@@ -3397,7 +3340,6 @@ CONFIG_FAT_DEFAULT_IOCHARSET="iso8859-1"
 # Pseudo filesystems
 #
 CONFIG_PROC_FS=y
-CONFIG_PROC_VMCORE=y
 CONFIG_PROC_SYSCTL=y
 CONFIG_PROC_PAGE_MONITOR=y
 CONFIG_SYSFS=y
@@ -3631,6 +3573,7 @@ CONFIG_SECURITY_SELINUX_CHECKREQPROT_VALUE=1
 # CONFIG_IMA is not set
 # CONFIG_EVM is not set
 CONFIG_DEFAULT_SECURITY_SELINUX=y
+# CONFIG_DEFAULT_SECURITY_SONY is not set
 # CONFIG_DEFAULT_SECURITY_DAC is not set
 CONFIG_DEFAULT_SECURITY="selinux"
 CONFIG_CRYPTO=y
@@ -3770,7 +3713,6 @@ CONFIG_ZLIB_INFLATE=y
 CONFIG_ZLIB_DEFLATE=y
 CONFIG_LZO_COMPRESS=y
 CONFIG_LZO_DECOMPRESS=y
-CONFIG_LZ4_DECOMPRESS=y
 CONFIG_XZ_DEC=y
 CONFIG_XZ_DEC_X86=y
 CONFIG_XZ_DEC_POWERPC=y
@@ -3785,7 +3727,6 @@ CONFIG_DECOMPRESS_BZIP2=y
 CONFIG_DECOMPRESS_LZMA=y
 CONFIG_DECOMPRESS_XZ=y
 CONFIG_DECOMPRESS_LZO=y
-CONFIG_DECOMPRESS_LZ4=y
 CONFIG_GENERIC_ALLOCATOR=y
 CONFIG_REED_SOLOMON=y
 CONFIG_REED_SOLOMON_ENC8=y
