wheatly governor fixup

--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -88,17 +88,17 @@ config CPU_FREQ_DEFAULT_GOV_ONDEMAND
 	  governor. If unsure have a look at the help section of the
 	  driver. Fallback governor will be the performance governor.
 
+config CPU_FREQ_DEFAULT_GOV_WHEATLEY
+	bool "wheatly"
+	select CPU_FREQ_GOV_WHEATLEY
+	help
+	  'wheatly' - a "wheathley" optimized governor!.
+
 config CPU_FREQ_DEFAULT_GOV_PEGASUSQ
 	bool "pegasusq"
 	select CPU_FREQ_GOV_PEGASUSQ
 	help
 	  Use the CPUFreq governor 'pegasusq' as default.
-
-config CPU_FREQ_GOV_WHEATLEY
-	bool "wheatley"
-	select CPU_FREQ_GOV_WHEATLEY
-	help
-	  'wheatly' - a "wheathley" optimized governor!.
 
 config CPU_FREQ_DEFAULT_GOV_CONSERVATIVE
 	bool "conservative"
@@ -133,12 +133,6 @@ config CPU_FREQ_GOV_PERFORMANCE
 	  module will be called cpufreq_performance.
 
 	  If in doubt, say Y.
-	  
- config CPU_FREQ_DEFAULT_GOV_WHEATLEY
-	bool "wheatley"
-	select CPU_FREQ_GOV_WHEATLEY
-	help
-	  Use the CPUFreq governor 'wheatley' as default.
 
 
 config CPU_FREQ_GOV_POWERSAVE
