--- a/arch/arm/configs/fire_defconfig
+++ b/arch/arm/configs/fire_defconfig
@@ -499,7 +499,6 @@ CONFIG_MSM_PIL_VENUS=y
 # CONFIG_MSM_PIL_GSS is not set
 CONFIG_MSM_PIL_PRONTO=y
 CONFIG_MSM_SCM=y
-CONFIG_MSM_BUSPM_DEV=m
 CONFIG_MSM_TZ_LOG=y
 CONFIG_MSM_RPM_LOG=y
 CONFIG_MSM_RPM_STATS_LOG=y
@@ -785,6 +784,7 @@ CONFIG_PM=y
 # CONFIG_PM_DEBUG is not set
 # CONFIG_APM_EMULATION is not set
 CONFIG_PM_CLK=y
+CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_CPU_PM=y
 # CONFIG_SUSPEND_TIME is not set
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
@@ -1803,7 +1803,6 @@ CONFIG_HW_RANDOM_MSM=y
 # CONFIG_DCC_TTY is not set
 # CONFIG_RAMOOPS is not set
 CONFIG_MSM_ADSPRPC=y
-CONFIG_MSM_RDBG=m
 CONFIG_I2C=y
 CONFIG_I2C_BOARDINFO=y
 CONFIG_I2C_COMPAT=y
@@ -1862,7 +1861,6 @@ CONFIG_SPI_QUP=y
 #
 # SPI Protocol Masters
 #
-CONFIG_SPI_SPIDEV=m
 # CONFIG_SPI_TLE62X0 is not set
 CONFIG_SPMI=y
 CONFIG_SPMI_MSM_PMIC_ARB=y
@@ -2997,7 +2995,6 @@ CONFIG_MMC_BLOCK_MINORS=32
 CONFIG_MMC_BLOCK_BOUNCE=y
 # CONFIG_MMC_BLOCK_DEFERRED_RESUME is not set
 # CONFIG_SDIO_UART is not set
-CONFIG_MMC_TEST=m
 CONFIG_MMC_BLOCK_TEST=m
 
 #
@@ -3275,9 +3272,7 @@ CONFIG_SIMPLE_GPU_ALGORITHM=y
 #
 # DEVFREQ Drivers
 #
-CONFIG_MOBICORE_SUPPORT=m
 # CONFIG_MOBICORE_DEBUG is not set
-CONFIG_MOBICORE_API=m
 CONFIG_CORESIGHT=y
 CONFIG_HAVE_CORESIGHT_SINK=y
 CONFIG_CORESIGHT_FUSE=y
@@ -3446,6 +3441,7 @@ CONFIG_NLS_ISO8859_1=y
 # CONFIG_NLS_KOI8_R is not set
 # CONFIG_NLS_KOI8_U is not set
 # CONFIG_NLS_UTF8 is not set
+CONFIG_DYNAMIC_FSYNC=y
 
 #
 # Kernel hacking
@@ -3711,7 +3707,6 @@ CONFIG_CRYPTO_ANSI_CPRNG=m
 # CONFIG_CRYPTO_USER_API_SKCIPHER is not set
 CONFIG_CRYPTO_HW=y
 CONFIG_CRYPTO_DEV_QCE50=y
-CONFIG_CRYPTO_DEV_QCRYPTO=m
 CONFIG_CRYPTO_DEV_QCE=y
 CONFIG_CRYPTO_DEV_QCEDEV=m
 # CONFIG_CRYPTO_DEV_OTA_CRYPTO is not set
