--- a/arch/arm/configs/fire_defconfig
+++ b/arch/arm/configs/fire_defconfig
@@ -499,6 +499,7 @@ CONFIG_MSM_PIL_VENUS=y
 # CONFIG_MSM_PIL_GSS is not set
 CONFIG_MSM_PIL_PRONTO=y
 CONFIG_MSM_SCM=y
+# CONFIG_MSM_BUSPM_DEV is not set
 CONFIG_MSM_TZ_LOG=y
 CONFIG_MSM_RPM_LOG=y
 CONFIG_MSM_RPM_STATS_LOG=y
@@ -673,6 +674,7 @@ CONFIG_ZONE_DMA_FLAG=0
 CONFIG_BOUNCE=y
 CONFIG_VIRT_TO_BUS=y
 CONFIG_KSM=y
+CONFIG_KSM_CHECK_PAGE=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 # CONFIG_CLEANCACHE is not set
 CONFIG_MEMORY_HOLE_CARVEOUT=y
@@ -756,6 +758,7 @@ CONFIG_CPU_FREQ_MSM=y
 CONFIG_VFP=y
 CONFIG_VFPv3=y
 CONFIG_NEON=y
+CONFIG_KERNEL_MODE_NEON=y
 
 #
 # Userspace binary formats
@@ -1801,8 +1804,10 @@ CONFIG_HW_RANDOM_MSM=y
 # CONFIG_RAW_DRIVER is not set
 # CONFIG_TCG_TPM is not set
 # CONFIG_DCC_TTY is not set
+CONFIG_FRANDOM=y
 # CONFIG_RAMOOPS is not set
 CONFIG_MSM_ADSPRPC=y
+# CONFIG_MSM_RDBG is not set
 CONFIG_I2C=y
 CONFIG_I2C_BOARDINFO=y
 CONFIG_I2C_COMPAT=y
@@ -1861,6 +1866,7 @@ CONFIG_SPI_QUP=y
 #
 # SPI Protocol Masters
 #
+# CONFIG_SPI_SPIDEV is not set
 # CONFIG_SPI_TLE62X0 is not set
 CONFIG_SPMI=y
 CONFIG_SPMI_MSM_PMIC_ARB=y
@@ -2995,6 +3001,7 @@ CONFIG_MMC_BLOCK_MINORS=32
 CONFIG_MMC_BLOCK_BOUNCE=y
 # CONFIG_MMC_BLOCK_DEFERRED_RESUME is not set
 # CONFIG_SDIO_UART is not set
+# CONFIG_MMC_TEST is not set
 CONFIG_MMC_BLOCK_TEST=m
 
 #
@@ -3272,7 +3279,7 @@ CONFIG_SIMPLE_GPU_ALGORITHM=y
 #
 # DEVFREQ Drivers
 #
-# CONFIG_MOBICORE_DEBUG is not set
+# CONFIG_MOBICORE_SUPPORT is not set
 CONFIG_CORESIGHT=y
 CONFIG_HAVE_CORESIGHT_SINK=y
 CONFIG_CORESIGHT_FUSE=y
@@ -3707,6 +3714,7 @@ CONFIG_CRYPTO_ANSI_CPRNG=m
 # CONFIG_CRYPTO_USER_API_SKCIPHER is not set
 CONFIG_CRYPTO_HW=y
 CONFIG_CRYPTO_DEV_QCE50=y
+# CONFIG_CRYPTO_DEV_QCRYPTO is not set
 CONFIG_CRYPTO_DEV_QCE=y
 CONFIG_CRYPTO_DEV_QCEDEV=m
 # CONFIG_CRYPTO_DEV_OTA_CRYPTO is not set
